<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAlertDialog"
        style="@style/my_own_text_style"
        android:text="@string/alert_dialog" />

    <TextView
        android:id="@+id/tvInputDialog"
        style="@style/my_own_text_style"
        android:text="@string/input_dialog" />

    <TextView
        android:id="@+id/tvToastDialog"
        style="@style/my_own_text_style"
        android:text="@string/toast_dialog" />

    <TextView
        android:id="@+id/tvDateDialog"
        style="@style/my_own_text_style"
        android:text="@string/date_dialog" />


    <TextView
        android:id="@+id/tvTimeDialog"
        style="@style/my_own_text_style"
        android:text="@string/time_dialog" />

    <TextView
        android:id="@+id/tvProgressDialog"
        style="@style/my_own_text_style"
        android:text="@string/progress_dialog" />

    <TextView
        android:id="@+id/tvCustomDialog"
        style="@style/my_own_text_style"
        android:text="@string/custom_dialog" />


</LinearLayout>